--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div>
     <img src="images/image-qr-code.png">
     <p class="heading">Improve your front-end skills by building projects</p>
-    <p class="basic-text">SScan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <p class="basic-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
 </body>
 </html>
